gitops/dev/base/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    app.kubernetes.io/name: nginx
    azure.workload.identity/use: "true"
spec:
  containers:
  - name: nginx
    image: kubeitglobalsvcauxacrwe.azurecr.io/nginxinc/nginx-unprivileged:latest
    ports:
    - containerPort: 80
